--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -30,12 +30,22 @@
       padding-bottom: 5px;
       font-family: $main_font;
       padding: 0 0 1% 6%;
+      margin: 0;
 
       @media screen and (min-width: 992px) {
         width: 15%;
         margin: 1% auto;
         padding: 0 0 0 6%;
       }
+    }
+
+    &__mention > ul, li {
+      list-style: none;
+
+    }
+
+    &__mention > ul, li > a {
+      text-decoration: none;
     }
 
     &-icon1 {
@@ -69,8 +79,3 @@
     }
   }
 }
-
-.footer__mention-line > a {
-  text-decoration: none;
-}
-
