--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -26,6 +26,7 @@
     background-color: #f2f2f2;
     border-radius: 35px 35px 0 0;
     padding-bottom: 5em;
+    margin-bottom: -30px;
 
     @media screen and (min-width:992px) {
       height: 40rem;
