--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -134,29 +134,46 @@
     margin: 0;
     padding: .6em 0 0 .9em;
     font-family: $main_font;
+    font-size: .9em;
     @include ellipse;
+
+    @media screen and (min-width:992px) {
+      font-size: 1em;
+    }
   }
 
   &__card__description {
     margin: 0;
     padding: .3em 0 .6em .9em;
     font-family: $main_font;
-    font-size: .9rem;
+    font-size: .8rem;
     @include ellipse;
+
+    @media screen and (min-width:992px) {
+      font-size: .9em;
+    }
   }
 
   &__card__price {
     position: relative;
-    font-size: .9rem;
+    font-size: .8rem;
     font-weight: bolder;
     width: 20%;
+
+    @media screen and (min-width:992px) {
+      font-size: .9em;
+    }
   }
 
   &__card__price-text {
     position: absolute;
-    top: 38%;
-    right: 1.6em;
+    top: 35%;
+    right: 1em;
     display: inline-block;
+
+    @media screen and (min-width:992px) {
+      top: 32%;
+    }
   }
 
   &__card__select {
